--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,9 @@ color: #76767F;
 .dis-none{
     display: none;
 }
+.max-w-218{
+    max-width: 218px;
+}
 /* preloder details  */
 #preloader {
     position: fixed;
