--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,11 @@
 
 .bg-img-1 {
     background-image: url(/assets/images/png/section-1-person-bg-img.png);
-    background-size: cover;
+    background-size: cover !important;
     background-repeat: no-repeat;
     background-position: center;
     height: 851px;
+    width: 100%;
 }
 
 .logo {
@@ -23,7 +24,9 @@
 .max-w-1432 {
     max-width: 1432px !important;
 }
-
+.bg-dark-blue{
+    background: #0E1122;
+}
 .main-heading {
     font-family: Abril Display;
     font-size: 62.12px;
@@ -391,28 +394,6 @@
 .max-w-218 {
     max-width: 218px;
 }
-
-/* preloder details  */
-#preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #282c34;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-}
-
-.loader {
-    width: 60px;
-    height: 60px;
-    background-color: greenyellow;
-    animation: rotate 1.2s linear infinite;
-}
-
 .dis-none {
     display: none;
 }
