--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,9 @@
         margin-top: 84px;
     }
 
+    .pt-xl-52{
+        padding-top: 52px;
+    }
     .top-left-2 {
         top: -10%;
         left: -5%;
