--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Comfortaa:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Sunflower:wght@300&family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Comfortaa:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Sunflower:wght@300&family=Yantramanav:wght@100;300;400;500;700;900&display=swap");
 
 * {
     margin: 0;
@@ -16,12 +16,15 @@
     height: 851px;
     width: 100%;
 }
-.pb-10{
+
+.pb-10 {
     padding-bottom: 10px;
 }
-.pb-6{
+
+.pb-6 {
     padding-bottom: 6px;
 }
+
 .logo {
     padding: 24px 0px 24px 0px;
 }
@@ -29,9 +32,11 @@
 .max-w-1432 {
     max-width: 1432px !important;
 }
-.bg-dark-blue{
-    background: #0E1122;
+
+.bg-dark-blue {
+    background: #0e1122;
 }
+
 .main-heading {
     font-family: Abril Display;
     font-size: 62.12px;
@@ -63,10 +68,12 @@
 .max-w-408 {
     max-width: 408px;
 }
-.mx-26{
+
+.mx-26 {
     margin-left: 26px;
     margin-right: 26px;
 }
+
 .btn-1 {
     font-family: Poppins;
     font-size: 16px;
@@ -76,14 +83,15 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     padding: 8.5px 43px 8.5px 43px;
-    background: #4C57FF;
-    border: 2px solid #4C57FF;
+    background: #4c57ff;
+    border: 2px solid #4c57ff;
     color: white;
     transition: all 300ms linear;
     border-radius: 100px;
     cursor: pointer;
 }
-.p-x-y{
+
+.p-x-y {
     padding: 3px 9px 3px 9px;
 }
 
@@ -91,7 +99,6 @@
     color: white;
     border: 2px solid white;
     background: black;
-
 }
 
 .pb-24 {
@@ -125,7 +132,7 @@
 
 .blur {
     backdrop-filter: blur(38.790000915527344px);
-    background: #F3F5FF38;
+    background: #f3f5ff38;
 }
 
 .max-w-159 {
@@ -167,7 +174,6 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
 
 .box-3-content {
@@ -234,7 +240,7 @@
 
 /* section-3 details  */
 .bg-cream {
-    background: #EFECE6;
+    background: #efece6;
 }
 
 .heading-2 {
@@ -246,7 +252,6 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
 
 .top-left-2 {
@@ -266,7 +271,6 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
 
 .max-w-364 {
@@ -314,7 +318,7 @@
     letter-spacing: 0.08em;
     text-align: center;
     padding-bottom: 20px;
-    color: #76767F;
+    color: #76767f;
 }
 
 .accodian-heading {
@@ -325,9 +329,9 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
-.max-w-480{
+
+.max-w-480 {
     max-width: 480px !important;
 }
 
@@ -345,7 +349,7 @@
 }
 
 .accordion-button {
-    background: #EFECE6 !important;
+    background: #efece6 !important;
 }
 
 .accordion-button {
@@ -376,8 +380,7 @@
     line-height: 22px;
     letter-spacing: 0.08em;
     text-align: left;
-    color: #76767F;
-
+    color: #76767f;
 }
 
 .max-w-1440 {
@@ -408,10 +411,10 @@
 .max-w-218 {
     max-width: 218px;
 }
+
 .dis-none {
     display: none;
 }
-
 
 @keyframes rotate {
     0% {
@@ -423,13 +426,13 @@
     }
 }
 
-@media (max-width:1260px) {
+@media (max-width: 1260px) {
     .xl-gap-30 {
         gap: 30px;
     }
 }
 
-@media (max-width:1200px) {
+@media (max-width: 1200px) {
     .row-reverse {
         flex-direction: column-reverse !important;
         display: flex !important;
@@ -439,9 +442,10 @@
         margin-top: 84px;
     }
 
-    .pt-xl-52{
+    .pt-xl-52 {
         padding-top: 52px;
     }
+
     .top-left-2 {
         top: -10%;
         left: -5%;
@@ -473,7 +477,7 @@
     }
 }
 
-@media (max-width:992px) {
+@media (max-width: 992px) {
     .pt-263 {
         padding-top: 50px;
     }
@@ -535,7 +539,7 @@
     }
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
     .md-d-none {
         display: none;
     }
@@ -558,7 +562,7 @@
     }
 }
 
-@media (max-width:460px) {
+@media (max-width: 460px) {
     .sm-gap-20 {
         gap: 10px !important;
     }
@@ -574,7 +578,6 @@
         font-size: 28px;
         font-weight: 600;
         line-height: 36px;
-
     }
 
     .description {
@@ -585,7 +588,7 @@
     }
 }
 
-@media (max-width:390px) {
+@media (max-width: 390px) {
     .sm-setup {
         position: relative;
         right: -20%;
@@ -602,7 +605,7 @@
     }
 
     .sm-scale {
-        transform: scale(.8);
+        transform: scale(0.8);
     }
 
     .sm-set-position {
@@ -621,7 +624,7 @@
     }
 }
 
-@media (max-width:350px) {
+@media (max-width: 350px) {
     .xs-mt-180 {
         margin-top: 180px;
     }
