--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,6 +549,7 @@
     .md-d-none {
         display: none;
     }
+
     .section-4-heading{
 font-size: 31.97px;
 font-weight: 600;
@@ -590,6 +591,9 @@ text-align: center;
   .md-pt-60-pb-60{
     padding-bottom: 60px;
     padding-top: 60px;
+  }
+  .btn-1{
+    padding: 6.5px 17px 6.5px 17px;
   }
 }
 
