--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,9 @@
     line-height: 24px;
     text-align: left;
 }
+.pt-60{
+    padding-top: 60px;
+}
 
 .accordion-button:not(.collapsed) {
     color: black !important;
@@ -557,6 +560,12 @@ line-height: 43.93px;
 text-align: center;
 
     }
+    .md-pb-0{
+        padding-bottom: 0 !important;
+    }
+ .md-pt-40{
+    padding-top: 40px;
+ }
 
 .size-change-md{
 font-family: Poppins;
